[Mac] Unable to select 'Off' or 'Auto' from track menu when tracks consist of unsupported track types https://bugs.webkit.org/show_bug.cgi?id=131908 <rdar://problem/15999882>

Reviewed by Eric Carlson.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setSelectedTextTrack): When the user selects 'Off', make sure the currently 'showing'
track is switched to 'disabled'.


Canonical link: https://commits.webkit.org/149998@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167578 268f45cc-cd09-0410-ab3c-d52691b4dbfc